--- a/docker-monolith/infra/ansible/ansible.cfg
+++ b/docker-monolith/infra/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./inventory
 roles_path = ./roles
-remote_user = docker
+remote_user = ubuntu
 private_key_file = ~/.ssh/yandex-cloud
 host_key_checking = False
 retry_files_enabled = False
