--- a/docker-monolith/infra/terraform/terraform.tfvars.example
+++ b/docker-monolith/infra/terraform/terraform.tfvars.example
@@ -1,9 +1,8 @@
-cloud_id        = "basdadsi4bpr"
-folder_id       = "b1gasdasda2"
-zone            = "ru-central1-a"
-image_id        = "fd8chj7g0mmar2irdiq3"
-public_key_path = "~/.ssh/appuser.pub"
-subnet_id       = "e9bsp46b89aurtoh4ai7"
-node_count      = 2
-#token       = ""
-service_account_key_file = "../secrets/key.json"
+cloud_id                 = "b1g62e9lu5j93eii4bpr"
+folder_id                = "b1gs3691qde16947ng5t"
+zone                     = "ru-central1-a"
+public_key_path          = "~/.ssh/yandex-cloud.pub"
+subnet_id                = "e9bmfnr0jifjdfrff2n4"
+service_account_key_file = "../../packer/key.json"
+private_key_path         = "~/.ssh/yandex-cloud"
+docker_disk_image        = "fd8k0pcd1lptj0glbun1"
