--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,10 +1,12 @@
-FROM python:3.6.0-alpine
+
+FROM python:3.6-alpine
+
 
 WORKDIR /app
 ADD . /app
 
 RUN apk --no-cache --update add build-base && \
-    pip3 install -r /app/requirements.txt && \
+    pip install -r /app/requirements.txt && \
     apk del build-base
 
 ENV POST_DATABASE_HOST post_db
