--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,7 +2,7 @@ CURRENT_PATH := $(shell pwd)
 
 # Тестовая комманда
 current-path:
-	@echo $(args)
+	@echo $(CURRENT_PATH)
 
 # Исполнение файла командой `make docker-login LOGIN=user` после вести пароль.
 docker-login:
@@ -17,3 +17,14 @@ build-images:
 	@for i in ui post-py comment; \
 	  do cd .. && cd src/$$i && pwd && chmod 755 docker_build.sh && ./docker_build.sh && cd ..; \
 	    done
+
+# Вместо felitsia можно использовать переменную которая берется при логине в Docker.
+# С помощью этой команды получим список наших образов и можно реализовать пуш образов из этого списка.
+# Пока что не могу реализовать. Ибо везде разный синтаксис использования Makefile и часть не работает...
+docker-list:
+	@docker ps | awk '{print $$2}' | sed '/felitsia/!d'
+
+#push-images:
+#	@for i in ui post-py comment; \
+#	  do cd .. && cd src/$$i && pwd && docker push $(USERNAME)/ && ./docker_build.sh && cd ..; \
+#	    done
