--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -1,3 +1,5 @@
+version: '3.3'
+
 services:
   prometheus:
     image: ${USERNAME}/prometheus
@@ -84,7 +86,6 @@ services:
   telegraf:
     image: telegraf:latest
     container_name: telegraf
-    network_mode: "host"
     volumes:
       - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
     environment:
