--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-#version: '3.3'
+version: '3.3'
 
 services:
   post_db:
@@ -17,6 +17,7 @@ services:
         aliases:
           - comment_db
           - post_db
+
 
   ui:
     image: ${USERNAME}/ui:${UI_VER}
@@ -49,9 +50,8 @@ services:
 
 volumes:
   post_db:
-
+  prometheus_data:
 
 networks:
   frontend_network:
-  prometheus:
   backend_network:
