fix secret name

--- a/kubernetes/reddit/secret.yaml
+++ b/kubernetes/reddit/secret.yaml
@@ -48,6 +48,6 @@ data:
     TqTANzFNRxzoUqX4rn2HikL5
 kind: Secret
 metadata:
-  name: my-tls-secret
+  name: sui-ingress
   namespace: dev
 type: kubernetes.io/tls
