--- a/kubernetes/reddit/ui-ingress.yml
+++ b/kubernetes/reddit/ui-ingress.yml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "false"
 spec:
   tls:
-  - secretName: my-tls-secret
+  - secretName: sui-ingress
   backend:
     serviceName: ui
     servicePort: 9292
