--- a/kubernetes/reddit/secret.yaml
+++ b/kubernetes/reddit/secret.yaml
@@ -48,6 +48,6 @@ data:
     TqTANzFNRxzoUqX4rn2HikL5
 kind: Secret
 metadata:
-  name: sui-ingress
+  name: ui-ingress
   namespace: dev
 type: kubernetes.io/tls
