--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -41,8 +41,7 @@ spec:
 #          mountPath: /data/db
 #      volumes:
 #      - name: mongo-persistent-storage
-#        persistentVolumeClaim:
-#          claimName:  mongo-pvc
+##          claimName:  mongo-pvc
 #      volumes:
 #      - name: mongo-persistent-storage
 #        emptyDir: {}
